@@ -4,8 +4,8 @@ AUX gtk2hs-0.9.10-store.patch 678 RMD160 9369b99cfca278e252ea6b5c25ba23bcb53603e
 DIST gtk2hs-0.9.11.tar.gz 980618 RMD160 c745020329fab493752d9055c4c8bca798b5d3e1 SHA1 6150312809e99ca3bcfc9f1f851d48a5253022ce SHA256 5da4c1fd7f0b66834e2aaf919d243928f63c15411e6289b2f31dfafb50848691
 DIST gtk2hs-0.9.12.1.tar.gz 1004661 RMD160 cd658027ed91b9550915e686d546e36b1b371c10 SHA1 a85f8568aa072e0c55da5889b2aabff92b8da3ae SHA256 4278078b786202fc64f86881c2b2517bdd589d5248bff2e9b7e6c1ffd2361f84
 DIST gtk2hs-0.9.12.tar.gz 997153 RMD160 bfc3ad81be80fdbbf1694493d93ddf863efbf6d8 SHA1 401638c5abfc357b648e4aa4b234874c116a52bb SHA256 b7427fca5d1958a829b2623715a9b16d4b08d67820df0b46ad32e5bd6e1f44d2
-EBUILD gtk2hs-0.9.11.ebuild 3091 RMD160 8397c203bf7372f564068b7fe8bc78db270f3869 SHA1 5d5624f0936333e32252bd93e6a4bbee0df196fd SHA256 39d1f561adfeab53a6973fcc9a9f6464eb61c0bd3d9622fa8000a607cc7b4f46
-EBUILD gtk2hs-0.9.12.1.ebuild 3112 RMD160 5c124458a812ff36497d73a12db3941424553333 SHA1 3238d82fad285ec21635a856c629d7b4dcccf129 SHA256 fe78d9bccc1b9b6b9ab4e6b94a00bdaf69bd5418dd75d91342af7779f748daf9
-EBUILD gtk2hs-0.9.12.ebuild 3321 RMD160 396f60d21788a6e8716976843203ae1ce21e7fa8 SHA1 42c5568a9599ed4727d4d1af6cabaf57282effd4 SHA256 a40f4bef73afb7d9b806346f85fc2fbd7caeff8aa505c9edf854239de525b160
-MISC ChangeLog 5781 RMD160 8d34dc88acb7edac221ecdb0918828ee791f9520 SHA1 389002a533ada027750d8176665d8ad1f85996a0 SHA256 2d1f20d158e9902f6a458bcadcc6683097dcba5e94ac0efc8e7cf162e91c4892
+EBUILD gtk2hs-0.9.11.ebuild 3089 RMD160 41d3ee491c7fe970fa184c6af26ce0c81ee938ce SHA1 af3969e4330e176abf7945f995d92066bfdca0f7 SHA256 1eaa401700d372838d24c9557c37a9e51ddee6e95e69a2cd6a0bf8f3ccf92e53
+EBUILD gtk2hs-0.9.12.1.ebuild 3110 RMD160 072ebb8348163e7ccf85d4f969eb6bbf882a3cdc SHA1 4310c0abc3e7a3c2392a2b8dfd65d2d649465611 SHA256 bd71212cc0b81367a215f4e422bd0fa609fc8a831f1a8ee1298b4901cc3f26ff
+EBUILD gtk2hs-0.9.12.ebuild 3319 RMD160 2dde9fcc69f3c87b2eb36a4197f48ba6ac7ada5d SHA1 2273a1ad3877d7c4e6c90519f3e70a033cd0e116 SHA256 198e5d051699baa27b53075f15220c0c404ca336c5faa603e98bedc18682da5d
+MISC ChangeLog 5966 RMD160 e75dd8e9131d8ceae879125d3dcc836fabef5d31 SHA1 d614024f588b7c1fd42375be5e9c7d80d5d53278 SHA256 f3dd1fcff7043e7700072f5a78781ee4458faed4a1aa9ef4763baad17edb8210
 MISC metadata.xml 223 RMD160 eb1d7f78c4800a9e0b74e5d99b83a17d0eb247be SHA1 3be3a7139f7e71b712959fb7465f73d1bcb6ba07 SHA256 8c4b3cde4b0d254edca1f695296876df4ac96ca844d68e8152cfc5f6dbe39792
